--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -41,3 +41,46 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+img.logo {
+ -webkit-animation: bounce-in 1s ease 2s 1 normal ;
+ animation: bounce-in 1s ease 2s 1 normal ;
+}
+
+@-webkit-keyframes bounce-in {
+  0%{
+	opacity: 0;
+	-webkit-transform: scale(.3);
+	transform: scale(.3);
+  }
+  50%{
+	opacity: 1;
+	-webkit-transform: scale(1.0);
+	transform: scale(1.0);
+  }
+  70%{
+	-webkit-transform: scale(0.9);
+	transform: scale(0.9);
+  }
+  100%{
+	-webkit-transform: scale(1);
+	transform: scale(1);
+  }
+}
+
+@keyframes bounce-in {
+  0%{
+	opacity: 0;
+	transform: scale(.3);
+  }
+  50%{
+	opacity: 1;
+	transform: scale(1.0);
+  }
+  70%{
+	transform: scale(0.9);
+  }
+  100%{
+	transform: scale(1);
+  }
+}
