--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -2,7 +2,7 @@
   <div class="jumbotron text-center">
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-        <img alt="proKilnLogo" class="img-responsive text-center center-block" src="/modules/core/client/img/brand/logo.png" />
+        <img alt="proKilnLogo" class="logo img-responsive text-center center-block" src="/modules/core/client/img/brand/logo.png" />
       </div>
     </div>
     <br>
