--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -43,7 +43,7 @@
   <button type="button" ui-sref="schedules.program({ scheduleId: vm.controlPanel.schedule._id })" class="btn btn-primary">Edit</button>
   <div class="btn-group">
     <!-- TODO -->
-    <button type="button" ng-disabled="controlPanel.isDisabled" class="btn btn-success" ng-click="vm.start()"><i class="glyphicon glyphicon-glyphicon-fire"></i> Start</button>
+    <button type="button" ng-disabled="!vm.controlPanel.online" class="btn btn-success" ng-click="vm.start()"><i class="glyphicon glyphicon-glyphicon-fire"></i> Start</button>
     <button type="button" class="btn btn-warning" ng-click="vm.stop()">Cancel</button>
   </div>
   <p ng-bind="vm.controlPanel.scheduleStatus"></p>
