--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -7,7 +7,7 @@
     </h1>
   </div>
   <div class="pull-right">
-    <a ui-sref="controlPanel.edit({ controlPanelId: vm.controlPanel._id })" class="btn btn-info" >
+    <a ui-sref="controlPanels.edit({ controlPanelId: vm.controlPanel._id })" class="btn btn-info" >
       <i class="glyphicon glyphicon-edit"></i> Edit
     </a>
   </div>
