--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -18,34 +18,37 @@
       Owned by
       <span ng-if="vm.controlPanel.user" ng-bind="vm.controlPanel.user.displayName"></span>
       <span ng-if="!vm.controlPanel.user">Deleted User</span>
-      kiln added on
+       added on
       <span ng-bind="vm.controlPanel.created | date:'mediumDate'"></span>
     </em>
   </small>
   <h3>Temp over time</h3>
   <h1 ng-bind="vm.temp + ' C'"></h1>
   <h2 >{{ vm.updateTime | date : 'short'}}</h2>
-  <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.templot"
-  chart-labels="vm.labels"  chart-options="vm.options"
-  chart-dataset-override="vm.datasetOverride" chart-click="vm.onClick">
+  <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.temp"
+  chart-labels="vm.labels"  chart-options="vm.optionsTemp"
+  chart-dataset-override="vm.datasetOverride">
   </canvas>
   
   <blockquote cite="http://">
     <code class="lead" ng-bind="vm.controlPanel.content"></code>
   </blockquote>
 </div>
-<div class=".col-md-4">
+<div class="col-md-4">
   <br>
   <h3>Schedule</h3>
-  <div class="form-group col-md-6">
+  <div class="form-group">
     <label for="sel1">Select Schedule:</label>
     <div class="row">
     <div class="col col-3">
-    <select ng-change="change(schedule)" ng-model="vm.controlPanel.schedule" ng-options="(schedule.title + ' - ' + schedule.content) for schedule in vm.schedules" class="form-control"  id="sel1">
+    <select ng-model="vm.controlPanel.schedule" ng-options="vm.schedules.title for x in vm.schedules"  class="form-control" >
+    </select>
+      <!-- ng-change="change(schedule)" -->
       <!-- <option ng-if="vm.schedules.length <= 0" value="">Please make a Schedule on the Schedule tab</option> -->
       <!-- <option ng-if="vm.schedules.length >= 1" value="">Pick a Schedule to run</option> -->
-      <option ng-if="vm.schedule.title" value="">Pick a Schedule to run</option>
-    </select>
+
+      <!-- <option ng-if="!vm.schedule" value="">Pick a Schedule to run</option> -->
+
     </div>
     <div class="col col-1">
      <button type="button" ng-disabled="!vm.controlPanel.schedule._id" ui-sref="schedules.program({ scheduleId: vm.controlPanel.schedule._id })" class="btn btn-info"> <i class="glyphicon glyphicon-edit"></i></button>
@@ -54,16 +57,13 @@
     
   </div>
 
-  <div class="panel-heading">
     <h3 class="panel-title">Chart of Schedule</h3>
-  </div>
-  <div class="panel-body">
   <!-- <chartist class="ct-chart" chartist-data="{{vm.barData}}" chartist-chart-type="Bar"></chartist> -->
-  <canvas id="line" class="chart chart-line .col-md-6" chart-data="vm.controlPanel.schedule.values"
+  <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.schedule.values"
   chart-labels="vm.labels"  chart-options="vm.options"
   chart-dataset-override="vm.datasetOverride" chart-click="vm.onClick">
   </canvas>
-  </div>
+
   <h6>Settings</h6>
   <!-- TODO -->
   <div class="btn-group">
