--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,57 +18,39 @@
       </p>
     </div>
   </div>
-  <uib-carousel interval="myInterval" active="activeSlide">
+  <!-- <uib-carousel interval="myInterval" active="activeSlide">
       <uib-slide ng-repeat="slide in vm.slides" index="$index">
           <img ng-src="{{slide.image}}" style="margin:auto; width:100%">
           <div class="carousel-caption">
-              <!-- <h4>Slide {{$index+1}}</h4> -->
+         
           </div>
       </uib-slide>
-  </uib-carousel>
+  </uib-carousel> -->
   <div>
-    <h2>Congrats! You've configured and run the sample application.</h2>
-    <p>prokiln is a web application boilerplate, which means you should start changing everything :-)</p>
-    <p>This sample application tracks users and articles.</p>
-    <ul>
-      <li>
-        Click
-        <em>Sign Up</em> to get started.
-      </li>
-      <li>
-        Configure your app to work with your social accounts, by editing the
-        <em>/config/env/*.js</em> files.
-      </li>
-      <li>
-        Edit your users module.
-      </li>
-      <li>
-        Add new CRUD modules.
-      </li>
-      <li>
-        Have fun...
-      </li>
-    </ul>
+      <h2>
+          Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.  
+      </h2>
+    <h5>
+        Our goal is to create and maintain the most advanced Kiln controller to ever exist. We are a small but dedicated team of software engineers. We value balancing clean User experience  functionality to produce the greatest experience from our products. Our Kiln controller combines the traditional functionality with a modern day internet upgrade.         
+    </h5>
   </div>
 
   <div class="well">
-    <h2>proKiln Documentation</h2>
+    <h4>proKiln</h4>
     <p>
-      Once you're familiar with the foundation technology, check out the MEAN.JS Documentation:
+Find out more infomation about proKiln bellow
       <ul>
-        <li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>
-        </li>
-        <!-- <li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>
-				</li> -->
-        <li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
-        </li>
-        <li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>
-        </li>
-        <li><a target="_blank" href="http://meanjs.org/community.html">Community</a>
-        </li>
-        <li><a target="_blank" href="http://blog.meanjs.org">Blog</a>
+        <li><a target="_blank" ui-sref="about">About</a>
         </li>
       </ul>
+      <ul>
+          <li><a target="_blank" ui-sref="buy">Buy</a>
+          </li>
+        </ul>
+        <ul>
+            <li><a target="_blank" ui-sref="documentation">Documentation</a>
+            </li>
+          </ul>
     </p>
   </div>
   <br>Enjoy &amp; Keep Us Updated,
