--- a/modules/controlPanels/client/views/edit-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/edit-controlPanel.client.view.html
@@ -21,13 +21,17 @@
             <p class="help-block error-text" ng-message="required">ControlPanel title is required.</p>
           </div>
         </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="emailAlerts">I want to receive email updates of this kiln</label>
+          <input type="checkbox" data-ng-model="vm.controlPanel.emailAlerts"></input>
+        </div>
         <div class="form-group">
           <label class="control-label" for="content">Content</label>
           <textarea name="content" data-ng-model="vm.controlPanel.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-default">Update</button>
-          </div>
+        </div>
       </fieldset>
     </form>
   </div>
