--- a/modules/controlPanels/client/views/view-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/view-controlPanel.client.view.html
@@ -11,7 +11,6 @@
         <i class="glyphicon glyphicon-edit"></i> Edit
        </a>
     </div>
-  
     <div class="col-md-6">
     <small>
       <em class="text-muted">
@@ -22,48 +21,52 @@
         <span ng-bind="vm.controlPanel.created | date:'mediumDate'"></span>
       </em>
     </small>
-    <h3>Temp over time</h3>
     <h1 ng-bind="vm.temp + ' C'"></h1>
-    <h2 >{{ vm.updateTime | date : 'short'}}</h2>
-    <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.runs.temp[0]"
+    <h2 >{{ vm.updateTime | date : 'm'}}</h2>
+    <h3>Temp over time</h3>
+    <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.runs.temp"
     chart-labels="vm.labels"  chart-options="vm.optionsTemp"
     chart-dataset-override="vm.datasetOverride">
     </canvas>
-  
+    <label for="sel1">Select Past Run:</label>
+    <select ng-model="vm.runChanger" style="padding:3px 1px; width:100%;" ng-options="runNames.name for runNames in vm.controlPanel.runNames" ng-change="vm.changeRun()">
+    </select>
     <blockquote cite="http://">
       <code class="lead" ng-bind="vm.controlPanel.content"></code>
     </blockquote>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <br>
     <h3>Schedule</h3>
     <div class="form-group">
       <label for="sel1">Select Schedule:</label>
       <div class="row">
-      <div class="col col-3">
-      <select ng-model="vm.controlPanel.schedule" ng-options="vm.schedules.title for x in vm.schedules"  class="form-control" >
+          <form role="form" class="form-inline">  
+      <select ng-model="vm.controlPanel.schedule" ng-options="vm.schedules.title as (vm.schedules.title) for schedule in vm.schedules"  class="form-control col col-12" >
+          <option value="">-- Select a Schedule --</option>
       </select>
         <!-- ng-change="change(schedule)" -->
         <!-- <option ng-if="vm.schedules.length <= 0" value="">Please make a Schedule on the Schedule tab</option> -->
         <!-- <option ng-if="vm.schedules.length >= 1" value="">Pick a Schedule to run</option> -->
-  
+
         <!-- <option ng-if="!vm.schedule" value="">Pick a Schedule to run</option> -->
-  
-      </div>
-      <div class="col col-1">
+
+      
        <button type="button" ng-disabled="!vm.controlPanel.schedule._id" ui-sref="schedules.program({ scheduleId: vm.controlPanel.schedule._id })" class="btn btn-info"> <i class="glyphicon glyphicon-edit"></i></button>
-       </div>
+      </form>
       </div>
-  
     </div>
-  
+
+
+
       <h3 class="panel-title">Chart of Schedule</h3>
-    <!-- <chartist class="ct-chart" chartist-data="{{vm.barData}}" chartist-chart-type="Bar"></chartist> -->
-    <canvas id="line" class="chart chart-line col-md-6" chart-data="vm.controlPanel.schedule.values"
+    <canvas id="line" class="chart chart-line" chart-data="vm.controlPanel.schedule.values"
     chart-labels="vm.labels"  chart-options="vm.options"
-    chart-dataset-override="vm.datasetOverride" chart-click="vm.onClick">
+    chart-dataset-override="vm.datasetOverride">
     </canvas>
-  
+  </div>
+  <div class="row">
+      <div class="col-md-6"></div>
     <h6>Settings</h6>
     <!-- TODO -->
     <div class="btn-group">
@@ -72,7 +75,7 @@
       <button type="button" class="btn btn-danger" ng-click="vm.stop()">Stop</button>
     </div>
     <p ng-bind="vm.controlPanel.scheduleStatus"></p>
-  
+
     <div class="progress">
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="vm.controlPanel.scheduleProgress" aria-valuemin="0" aria-valuemax="100" style="width: {{vm.controlPanel.scheduleProgress}}%">
       <span class="sr-only">{{vm.controlPanel.scheduleProgress}}% Complete</span>
@@ -80,12 +83,10 @@
     <!-- <small><em>Object (changes type based on value)</em></small>
   <uib-progressbar class="progress-striped active" value="dynamic" type="{{vm.controlPanel.scheduleProgress}}">{{vm.controlPanel.scheduleProgress}} <i ng-show="showWarning">!!! Watch out !!!</i></uib-progressbar> -->
   </div>
-    <label for="sel1">Select Past Run:</label>
-    <select ng-model="vm.controlPanel.runs" ng-options="vm.controlPanel.runs.scheduleTitle for x in vm.controlPanel.runs" class="form-control" >
-      <!-- TODO -->
-    </select>
+  <div class="form-group">
+
+ 
   </div>
-  
-  <input type="number" id="tempText" name="tempText" class="form-control" ng-model="vm.tempText" ng-change="vm.sendtemp()" value="{{vm.temp}}">
-  </section>
-  
+</div>
+</div>
+</section>
