--- a/modules/controlPanels/client/views/list-controlPanels.client.view.html
+++ b/modules/controlPanels/client/views/list-controlPanels.client.view.html
@@ -32,7 +32,8 @@
       No proKiln controllers found. Would you like to&nbsp
       <a class="btn btn-primary btn-lg" ui-sref="buy"> buy one </a>
       &nbsp or &nbsp
-      <a class="btn btn-primary btn-lg" ui-sref="documentation"> set one up </a>
+      <!-- <a class="btn btn-primary btn-lg" ui-sref="documentation"> set one up </a> -->
+      <a class="btn btn-primary btn-lg" ng-click="vm.demoAdd()"> demo add kiln </a>
       &nbsp?
     </font>
   </div>
