--- a/modules/controlPanels/client/views/list-controlPanels.client.view.html
+++ b/modules/controlPanels/client/views/list-controlPanels.client.view.html
@@ -25,12 +25,12 @@
           Loading request
       </font>
   </div>
-    
+
   <div class="alert alert-warning text-center" data-ng-if="!vm.pagedItems.length && vm.pagedItems">
     <!-- <div class="alert alert-warning text-center" data-ng-if="!vm.pagedItems.length"> -->
     <font size="5">
       No proKiln controllers found. Would you like to&nbsp
-      <a class="btn btn-primary btn-lg" ui-sref="buy"> buy one </a>
+      <a class="btn btn-primary btn-lg" ui-sref="buy"> order one </a>
       &nbsp or &nbsp
       <!-- <a class="btn btn-primary btn-lg" ui-sref="documentation"> set one up </a> -->
       <a class="btn btn-primary btn-lg" ng-click="vm.demoAdd()"> demo add kiln </a>
