--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -1,58 +1,17 @@
 <section>
-<h1>Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.  </h1>
-        <p>
-                Our goal is to create and maintain the most advanced Kiln controller to ever exist. We are a small but dedicated team of software engineers. We value balancing clean User experience  functionality to produce the greatest experience from our products. Our Kiln controller combines the traditional functionality with a modern day internet upgrade.                 
-        </p>
-        <h3>
-                Order Status
-        </h3>   
-        <p>
-                More information to come...                
-        </p>
-        <h3>
-                How to Shop
-        </h3>
-        <p>
-                More information to come...
-        </p>
-        <h3>
-                Creating an account
-        </h3>
-        <p>
-        To create an account you click the signup button on the top right of the page which will take you to a different page which will allow you to input your details to create the account. All you need to make an account is a first and last name, an email, a custom username and password. 
-        </p>
-        <h3>
-            Signing in
-        </h3>
-        <p>
-                To sign in you just need your custom username and password combination to log into your account. Once you have these, click on the top right of the home page where it says “sign in” and you will be redirected to a page which will allow you to input these details. Once you have done as such, click sign in and you will be redirected again to your personal homepage.
-        </p>
-        <h3>
-                Purchasing a controller
-        </h3>
-        <p>
-                Once logged in to your account there is a button on the top bar called Buy, which will take you to a page which will allow you to purchase our kiln controller. More information to come...
-        </p>
-        <h3>
-                Adding a kiln
-        </h3>
-        <p>
-        More information to come...
-        </p>
-        <h3>    
-             Getting your kiln online
-        </h3>
-        <p>
-                More information to come...                
-        </p>
-        <h3>
-                Creating a schedule 
-        </h3>
-        <p>
-                To create a schedule you need to be logged into your account, once logged in you can click on the schedules button on the bar at the top of the screen, this will take you to the schedules page. Here you can create a schedule for your kiln which you can save and use later.
-                Starting the schedule
-                Once you have created a schedule (see above) you will be able to get your kiln controller to run it by clicking on the “ControlPanels” page in the top bar, this will take you to your controllers. Clicking on a controller will take you to the page for that controller which will let you select the schedule that you want to run.
-            
-        </p>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
+      <div class="page-header">
+<h1>About</h1>
+</div>
+  <p>Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.
+  </p><p>We are a small but dedicated team of software engineers with the goal of creating and maintaining a kiln controller that is easy to use.
+  </p><p>We value balancing clean user experience with functionality to produce the greatest experience from our products.
+  </p><p>Our Kiln controller combines the traditional functionality with a modern day internet upgrade.
+</p>
+<h2>Contact Us</h2>
+<p>If you need to contact us, please email <code>theSamuelJim@gmail.com</code></p>
+</div>
+</div>
 </section>
 <!-- TODO  -->
