--- a/modules/core/client/views/buy.client.view.html
+++ b/modules/core/client/views/buy.client.view.html
@@ -1,5 +1,9 @@
 <section>
-<h1>Request a Kiln</h1>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
+  <div class="page-header">
+<h1>Order a Kiln</h1>
+</div>
 <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
   <fieldset>
     <div class="form-group" show-errors>
@@ -25,5 +29,7 @@
     <br />
   </fieldset>
 </form>
+</div>
+</div>
 </section>
 <!-- TODO  -->
