--- a/modules/core/client/views/docs.client.view.html
+++ b/modules/core/client/views/docs.client.view.html
@@ -1,4 +1,41 @@
 <section>
-<h1>TODO</h1>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
+    <div class="page-header">
+    <h1> Documentation </h1>
+  </div>
+  <h4>Connecting a Kiln Controller to a Kiln</h4>
+  Place the controller next to your own kiln. Connect the two wires that are attached to the thermocouple on your kiln to the two nodes marked "Thermocouple" on the kiln controller. Next, connect the positive and negitive wires from the SSR to the two other nodes on the controller marked as + and - respectively.
+  <h4>Creating a Schedule</h4>
+  Schedules can be created in the Schedule List Viewer that can be accessed from the “Schedule” tab along the navigation bar. Clicking the plus will create a new schedule, where a name and description can be entered.
+  <h4>Creating a Program</h4>
+  Select a schedule from the Schedule List View. The first segment of the program is created and the rate, goal and hold can be edited. New segments can be added by clicking the “add segment” button. Each new segment will hold the same rate and goal as the previous section with a hold of zero. These new segments can also be edited. The order of the segments can be changed by selecting the up or down arrow beside the segment to be moved. Save must be selected before this page can be left to keep the changes.
+  <h4>Sending a Schedule to a Kiln</h4>
+  A schedule can be sent to a kiln controller to be run, on the Controller View page. The schedule to be sent is selected from a list of schedules. Clicking the “start” button will send the selected schedule to the kiln to begin firing.
+  <h4>Editing a Schedule</h4>
+  A schedule can be edited from any Controller View by selecting a schedule and then clicking the “edit” button. A schedule can also be edited by selecting a schedule from the Schedule List View. Both options take you to the program editor for the specified schedule. You can edit the title and description of the schedule by clicking the “edit” button.
+  <h4>Stopping a Schedule</h4>
+  When a schedule is running on a kiln controller, clicking the stop button will send a message to the controller to stop running the current firing schedule. This process is not guaranteed to stop the current schedule and it is recommended to seek confirmation that the schedule has stopped running.
+  <h4>Sign In</h4>
+  The sign in button is on the top right of the screen. Clicking this button shows the login page where username and password can be entered. Clicking sign in will finalise the sign in process. proKiln controllers cannot not be accessed without a valid account. The account required to access a specific kiln controller is the account that was selected when the controller was being setup.
+  <h4>Sign Up, Create an Account</h4>
+  Clicking sign up allows the creation of a user account. This is required to complete the proKiln controller setup. First name, last name, email, username and password are required for an account to be created. Once an account has been created, users are able to create schedules.
+  <h4>Controller List View</h4>
+  This lists all the controllers that are connected to an account. They are sorted with online before offline and display the last received temperature. Clicking on a controller shows the Controller View for that controller.
+  <h4>Controller View</h4>
+  This shows the information about the controllers.
+  <h4>Editing a Controller</h4>
+  The name, description and email setting of a controller can be edited by clicking on the edit button in a controller’s view. Update must be clicked once the edit is complete to save any changes.
+  <h4>Schedule List View</h4>
+  This lists all the schedules that were created by an account. Clicking on a schedule shows the schedule view.
+  <h4>Schedule View</h4>
+  This view shows the program for the selected schedule and allows the program to be edited.
+  <h4>Editing a Schedule</h4>
+  <p>The name and description of a schedule can be edited by clicking on the edit button in a schedule’s view. Update must be clicked once the edit is complete to save any changes.
+</p>
+</div>
+</div>
+
+
 </section>
 <!-- TODO  -->
