--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -22,16 +22,16 @@
       <uib-slide ng-repeat="slide in vm.slides" index="$index">
           <img ng-src="{{slide.image}}" style="margin:auto; width:100%">
           <div class="carousel-caption">
-         
+
           </div>
       </uib-slide>
   </uib-carousel> -->
   <div>
       <h2>
-          Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.  
+          Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.
       </h2>
     <h5>
-        Our goal is to create and maintain the most advanced Kiln controller to ever exist. We are a small but dedicated team of software engineers. We value balancing clean User experience  functionality to produce the greatest experience from our products. Our Kiln controller combines the traditional functionality with a modern day internet upgrade.         
+        Our goal is to create and maintain the most advanced Kiln controller to ever exist. We are a small but dedicated team of software engineers. We value balancing clean User experience  functionality to produce the greatest experience from our products. Our Kiln controller combines the traditional functionality with a modern day internet upgrade.
     </h5>
   </div>
 
@@ -44,7 +44,7 @@ Find out more infomation about proKiln bellow
         </li>
       </ul>
       <ul>
-          <li><a target="_blank" ui-sref="buy">Buy</a>
+          <li><a target="_blank" ui-sref="buy">Order</a>
           </li>
         </ul>
         <ul>
@@ -53,6 +53,5 @@ Find out more infomation about proKiln bellow
           </ul>
     </p>
   </div>
-  <br>Enjoy &amp; Keep Us Updated,
-  <br>The proKiln Team.
+  The proKiln Team - Samuel Henry, Isaac Parker, Lilith Wynter, Samuel Tapping<br><br>
 </section>
