--- a/modules/controlPanels/client/views/edit-controlPanel.client.view.html
+++ b/modules/controlPanels/client/views/edit-controlPanel.client.view.html
@@ -15,8 +15,8 @@
     <form name="vm.form.controlPanelForm" class="form-horizontal" ng-submit="vm.save(vm.form.controlPanelForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="title">Title</label>
-          <input name="title" type="text" ng-model="vm.controlPanel.title" id="title" class="form-control" placeholder="Title" required autofocus>
+          <label class="control-label" for="title">Name</label>
+          <input name="title" type="text" ng-model="vm.controlPanel.title" id="title" class="form-control" placeholder="Name" required autofocus>
           <div ng-messages="vm.form.controlPanelForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">ControlPanel title is required.</p>
           </div>
@@ -26,8 +26,8 @@
           <input type="checkbox" data-ng-model="vm.controlPanel.emailAlerts"></input>
         </div>
         <div class="form-group">
-          <label class="control-label" for="content">Content</label>
-          <textarea name="content" data-ng-model="vm.controlPanel.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <label class="control-label" for="content">Description</label>
+          <textarea name="content" data-ng-model="vm.controlPanel.content" id="content" class="form-control" cols="30" rows="10" placeholder="Description"></textarea>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-default">Update</button>
