--- a/modules/schedules/client/views/form-schedule.client.view.html
+++ b/modules/schedules/client/views/form-schedule.client.view.html
@@ -11,15 +11,15 @@
     <form name="vm.form.scheduleForm" class="form-horizontal" ng-submit="vm.save(vm.form.scheduleForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="title">Title</label>
-          <input name="title" type="text" ng-model="vm.schedule.title" id="title" class="form-control" placeholder="Title" required autofocus>
+          <label class="control-label" for="title">Name</label>
+          <input name="title" type="text" ng-model="vm.schedule.title" id="title" class="form-control" placeholder="Name" required autofocus>
           <div ng-messages="vm.form.scheduleForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Schedule title is required.</p>
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label" for="content">Content</label>
-          <textarea name="content" data-ng-model="vm.schedule.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <label class="control-label" for="content">Description</label>
+          <textarea name="content" data-ng-model="vm.schedule.content" id="content" class="form-control" cols="30" rows="10" placeholder="Description"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.schedule._id ? 'Update' : 'Create'}}</button>
