--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -4,11 +4,17 @@
       <div class="page-header">
 <h1>About</h1>
 </div>
-  <p>Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.
-  </p><p>We are a small but dedicated team of software engineers with the goal of creating and maintaining a kiln controller that is easy to use.
-  </p><p>We value balancing clean user experience with functionality to produce the greatest experience from our products.
-  </p><p>Our Kiln controller combines the traditional functionality with a modern day internet upgrade.
-</p>
+<img alt="logo" class="img-responsive col-md-3" src="/modules/core/client/img/brand/logo.png" />
+
+  <h6>Established in 2017, proKiln has delivered the most advanced Kiln controller to-date.
+  </h6><h6>We are a small but dedicated team of software engineers with the goal of creating and maintaining a kiln controller that is easy to use.
+  </h6><h6>We value balancing clean user experience with functionality to produce the greatest experience from our products.
+  </h6><h6>Our Kiln controller combines the traditional functionality with a modern day internet upgrade.
+</h6>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
 <h2>Contact Us</h2>
 <p>If you need to contact us, please email <code>theSamuelJim@gmail.com</code></p>
 </div>
